# OpenSourceVCU

./: .clang-format  CONTRIBUTING.md  LICENSE  README.md  compose.yaml
.devcontainer/: devcontainer.json
can_communication/vcu_can_generator/: README.md  requirements.txt  script.sh
can_communication/vcu_can_generator/addons/yourcar17/: InverterDataInput.msg
can_communication/vcu_can_generator/src/: main.py  util.py
can_communication/vcu_can_generator/src/generators/: decoding.py  packing.py  ros_msg.py  unpacking.py
can_communication/vcu_can_msgs_yourcar17/: CMakeLists.txt  README.md  package.xml
can_communication/vcu_can_msgs_yourcar17/can-dbc-yourcar17/: dummy.dbc
can_communication/vcu_can_msgs_yourcar17/msg/: Can1AppsBseSteering.msg  Can1BpsEbsPressure.msg  Dummy.msg  FsgBrakeAndEbsPressure.msg  FsgDvDrivingDynamics1.msg  FsgDvDrivingDynamics2.msg  FsgDvSystemStatus.msg  FsgFsDataloggerStatus.msg  InverterDataOutput.msg  KistlerAccBody.msg  KistlerAccHorAccCBody.msg  KistlerAngVelBody.msg  KistlerAngVelHor.msg  KistlerCorrevit.msg  KistlerDistance.msg  KistlerPitchRoll.msg  KistlerStatus.msg  KistlerVelAngle.msg
configs/: .tmux.conf  colcon_config.yaml
cooling/: CMakeLists.txt  package.xml
cooling/include/: CoolingNode.hpp
cooling/src/: cooling.cpp
docker/: Dockerfile  run_docker.sh
docker/bash_aliases/: can_generator.sh  shortcuts.sh
docker/bash_aliases/bash_aliases/: build_alias.sh  can_generator.sh  shortcuts.sh
dummy_dv/: CMakeLists.txt  package.xml
dummy_dv/src/: dummyNode.cpp
dummy_ev/: CMakeLists.txt  package.xml
dummy_ev/include/: EV_Data.hpp
dummy_ev/src/: dummy_ev.cpp
ix_msgs/: CMakeLists.txt  README.md  package.xml
ix_msgs/msg/: Accumulator.msg  DvObserver.msg  Energymeter.msg  GnssData.msg  Inverter.msg  InverterSetpoints.msg  LapCounter.msg  Mission.msg  Parameters.msg  Pedals.msg  Wheels.msg
mailman/: CMakeLists.txt  README.md  package.xml
mailman/include/: CANReader.hpp  MailmanData.hpp
mailman/include/motor_driver/: CANInterface.hpp  MotorDriver.hpp
mailman/src/: CANReader.cpp  mailman.cpp
mailman/src/motor_driver/: CANInterface.cpp  MotorDriver.cpp
scripts/: vcu_docker_launch.sh
vcu/: CMakeLists.txt  package.xml
vcu/include/: VCU_Data.hpp
vcu/src/: vcu.cpp
vcu/test/: test_integration.py
vcu_analytics/: CMakeLists.txt  package.xml
vcu_analytics/include/: Analytics_Data.hpp
vcu_analytics/src/: vcu_analytics.cpp
vcu_launch/: package.xml  setup.py
vcu_launch/launch/: vcu-foxglove.launch.py
vcu_launch/launch/vcu/: vcu-fullRecording.launch  vcu-smallRecording.launch  vcu.launch.py
vcu_launch/launch/vcu/params/: coolingParams.yaml  inverterParams.yaml  stateMachineParams.yaml  vcuParams.yaml  watchdogParams.yaml
vcu_launch/launch/vcu/params/misc/: paramsLoaderParams.yaml
vcu_msgs/: CMakeLists.txt  package.xml
vcu_msgs/msg/: ASSM.msg  ASSMOutput.msg  AccelBrakeSteer.msg  AccumulatorOutput.msg  Analytics.msg  CoolingRequest.msg  DISOutput.msg  DataLogger.msg  DriverInput.msg  HardwareAnalytics.msg  InverterOutput.msg  PDUOutput.msg  RESInput.msg  SteeringActuator.msg  Temps.msg  VehicleState.msg  VehicleStateDebug.msg  VehicleStateReadable.msg  Watchdog.msg  WatchdogDebug.msg
vcu_shared_lib/: .gitignore  CMakeLists.txt  README.md  package.xml
vcu_shared_lib/include/vcu_shared_lib/: enums.hpp  params.hpp  wheels.hpp
vcu_shared_lib/src/: enums.cpp  params.cpp  wheels.cpp
vcu_state_machine/: CMakeLists.txt  LICENSE  README.md  package.xml
vcu_state_machine/include/: EBSStateMachine.hpp  StateMachineData.hpp  TEST_CONFIG.hpp  Utils.hpp  stateMachineNode.hpp
vcu_state_machine/src/: ebsStateMachine.cpp  stateMachine.cpp  stateMachineNode.cpp
vcu_state_machine/test/: testEBSStateMachine.cpp  testHelper.cpp  testStateMachine.cpp  testStateTransition01.cpp  testStateTransition02.cpp  testStateTransition03.cpp  testStateTransition04.cpp  testStateTransition05.cpp  testStateTransition06.cpp  testStateTransition07.cpp  testStateTransition08.cpp  testStateTransition09.cpp  testStateTransition10.cpp  testStateTransition11.cpp  testStateTransition12.cpp  testStateTransition13.cpp  testStateTransition14.cpp  testStateTransition15.cpp  testStateTransition16.cpp  testStateTransition17.cpp  testStateTransition18.cpp  testStateTransition20.cpp  testStateTransition21.cpp  testStateTransition22.cpp
vcu_statistics/: CMakeLists.txt  package.xml
vcu_statistics/include/: Statistic_Data.hpp
vcu_statistics/src/: vcu_statistics.cpp
vcu_tests/: CMakeLists.txt  package.xml  setup.py
vcu_tests/tests/: test_cooling.py  test_watchdog.py
vcu_watchdog/: CMakeLists.txt  package.xml
vcu_watchdog/include/: Watchdog_Data.hpp
vcu_watchdog/src/: vcu_watchdog.cpp
vcu_watchdog/test/: test_integration.py
