<?xml version="1.0" ?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>state_machine</name>
  <version>0.1.0</version>
  <description>
    Package contains the State Machine which determines the state of the vehicle. It additionally controls SDC, TS, Inverters.
  </description>
  <maintainer email="laurin.hesslich@elbflorace.de">Laurin Hesslich</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ix_msgs</depend>
  <depend>vcu_msgs</depend>
  <depend>vcu_shared_lib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <test_depend>amend_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
