<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vcu_tests</name>
  <version>0.1.0</version>
  <description>Testing the vcu with integration tests.</description>
  <maintainer email="laurin.hesslich@elbflorace.de">Laurin Hesslich</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ix_msgs</depend>
  <depend>vcu_msgs</depend>
  <depend>vcu_watchdog</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>vcu_watchdog</test_depend>
  <test_depend>vcu</test_depend>




  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>